# ocr

./: main.py  pyproject.toml
templates/: index.html  result.html
